--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "chalk": "^4.1.0",
     "crypto": "^1.0.1",
     "express": "^4.17.1"
   }
